--- a/ui/src/responsive.css
+++ b/ui/src/responsive.css
@@ -25,16 +25,16 @@
     position: relative;
     left: 8.5vh!important;
   }
-  speed {
+  .speed {
     font-size: 2vh!important;
   }
-  speed:after {
+  .speed:after {
     font-size: 0.9vh!important;
   }
-  altitude {
+  .altitude {
     font-size: 2vh!important;
   }
-  altitude:after {
+  .altitude:after {
     font-size: 0.9vh!important;
   }
   .square {
@@ -71,16 +71,16 @@
     position: relative;
     left: 6.5vh!important;
   }
-  speed {
+  .speed {
     font-size: 1.2vh!important;
   }
-  speed:after {
+  .speed:after {
     font-size: 0.6vh!important;
   }
-  altitude {
+  .altitude {
     font-size: 1.2vh!important;
   }
-  altitude:after {
+  .altitude:after {
     font-size: 0.6vh!important;
   }
   .square {
@@ -118,16 +118,16 @@
     position: relative;
     left: 8.8vh!important;
   }
-  speed {
+  .speed {
     font-size: 1.4vh!important;
   }
-  speed:after {
+  .speed:after {
     font-size: 0.7vh!important;
   }
-  altitude {
+  .altitude {
     font-size: 1.4vh!important;
   }
-  altitude:after {
+  .altitude:after {
     font-size: 0.7vh!important;
   }
   .square {
@@ -165,16 +165,16 @@
     position: relative;
     left: 8.8vh!important;
   }
-  speed {
+  .speed {
     font-size: 1.4vh!important;
   }
-  speed:after {
+  .speed:after {
     font-size: 0.7vh!important;
   }
-  altitude {
+  .altitude {
     font-size: 1.4vh!important;
   }
-  altitude:after {
+  .altitude:after {
     font-size: 0.7vh!important;
   }
   .square {
@@ -211,16 +211,16 @@
     position: relative;
     left: 8vh!important;
   }
-  speed {
+  .speed {
     font-size: 1.6vh!important;
   }
-  speed:after {
+  .speed:after {
     font-size: 0.7vh!important;
   }
-  altitude {
+  .altitude {
     font-size: 1.6vh!important;
   }
-  altitude:after {
+  .altitude:after {
     font-size: 0.7vh!important;
   }
   .square {
@@ -257,16 +257,16 @@
     position: relative;
     left: 8vh!important;
   }
-  speed {
+  .speed {
     font-size: 1.8vh!important;
   }
-  speed:after {
+  .speed:after {
     font-size: 0.8vh!important;
   }
-  altitude {
+  .altitude {
     font-size: 1.8vh!important;
   }
-  altitude:after {
+  .altitude:after {
     font-size: 0.8vh!important;
   }
   .square {
@@ -303,16 +303,16 @@
     position: relative;
     left: 8.5vh!important;
   }
-  speed {
+  .speed {
     font-size: 2vh!important;
   }
-  speed:after {
+  .speed:after {
     font-size: 1.2vh!important;
   }
-  altitude {
+  .altitude {
     font-size: 2vh!important;
   }
-  altitude:after {
+  .altitude:after {
     font-size: 0.9vh!important;
   }
   .square {
@@ -349,16 +349,16 @@
     position: relative;
     left: 8.5vh!important;
   }
-  speed {
+  .speed {
     font-size: 3vh!important;
   }
-  speed:after {
+  .speed:after {
     font-size: 1.4vh!important;
   }
-  altitude {
+  .altitude {
     font-size: 3vh!important;
   }
-  altitude:after {
+  .altitude:after {
     font-size: 1.4vh!important;
   }
   .square {
